src/highlighting/snapshots/zsh_patina__highlighting__syntax__tests__zap2__f.snap
---
source: src/highlighting/syntax.rs
expression: "cfg.highlight(\"zap2 -f json ls\")?"
---
zap2 -f json ls

0   4   `zap2`  CALLABLE `zap2`
4   6   ` -`    punctuation.definition.parameter
6   7   `f`     variable.parameter.option
8   12  `json`  meta.function-call.arguments
13  15  `ls`    CALLABLE `ls`
