src/highlighting/snapshots/zsh_patina__highlighting__syntax__tests__zap2__pipe_no_arg.snap
---
source: src/highlighting/syntax.rs
expression: "cfg.highlight(\"zap2 --pipe arg1\")?"
---
zap2 --pipe arg1

0   4   `zap2`  CALLABLE `zap2`
4   7   ` --`   punctuation.definition.parameter
7   11  `pipe`  variable.parameter.option
12  16  `arg1`  meta.function-call.arguments
