src/highlighting/snapshots/zsh_patina__highlighting__syntax__tests__zap2__v.snap
---
source: src/highlighting/syntax.rs
expression: "cfg.highlight(\"zap2 -v ls\")?"
---
zap2 -v ls

0  4   `zap2`  CALLABLE `zap2`
4  6   ` -`    punctuation.definition.parameter
6  7   `v`     variable.parameter.option
8  10  `ls`    CALLABLE `ls`
