src/highlighting/snapshots/zsh_patina__highlighting__syntax__tests__zap2__v_p_no_arg.snap
---
source: src/highlighting/syntax.rs
expression: "cfg.highlight(\"zap2 -v -p arg1\")?"
---
zap2 -v -p arg1

0   4   `zap2`  CALLABLE `zap2`
4   6   ` -`    punctuation.definition.parameter
6   7   `v`     variable.parameter.option
7   9   ` -`    punctuation.definition.parameter
9   10  `p`     variable.parameter.option
11  15  `arg1`  meta.function-call.arguments
